# SCDM_MSSDxRL

./: .gitignore  MSSD x RL proposal.docx  pyproject.toml
configs/: defaults.yaml
configs/envs/: cartpole.yaml  cliffwalking.yaml
configs/experiments/: quick_smoke.yaml  sweep_cartpole.yaml  sweep_cliffwalking.yaml
notebooks/: 00_run_pipeline.ipynb
scripts/: collect_reference.py  generate_figures.py  generate_tables.py  run_experiment.py  run_sweep.py  train_agent.py
src/mssd/: __init__.py
src/mssd/agents/: __init__.py  base_agent.py  dqn.py  replay_buffer.py  tabular_q.py
src/mssd/baselines/: __init__.py  global_mmd.py
src/mssd/envs/: __init__.py  cartpole_wrapper.py  cliff_wrapper.py  shifts.py
src/mssd/evaluation/: __init__.py  analysis.py  metrics.py  runner.py
src/mssd/martingale/: __init__.py  product_martingale.py
src/mssd/monitor/: __init__.py  mssd_monitor.py  reference_buffer.py
src/mssd/probes/: __init__.py  base_probe.py  body_probe.py  kernels.py  structure_probe.py  tail_probe.py
src/mssd/utils/: __init__.py  config.py  io.py  logging.py  seeding.py
src/mssd/visualization/: __init__.py  comparisons.py  heatmaps.py  style.py  trajectories.py
tests/: conftest.py
tests/integration/: test_monitor_cartpole.py  test_monitor_cliffwalk.py  test_synthetic_pipeline.py
tests/unit/: test_body_probe.py  test_cliff_wrapper.py  test_evalue.py  test_martingale.py  test_metrics.py  test_shifts.py  test_structure_probe.py  test_tail_probe.py
