[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mssd"
version = "0.1.0"
description = "Multi-Scale Sequential Shift Detector for Deployed RL Agents"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "torch>=2.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
